[package]
name = "tyranny"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.33.1"
bevy_ecs = "0.16.1"
bevy_egui = "0.36.0"
leafwing-input-manager = "0.17.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

